--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,13 +9,13 @@ on:
 
 jobs:
   build:
-
-    runs-on: self-hosted
-
+    runs-on: self-hosted    
+    defaults:
+      run:
+        working-directory: ./server/
     strategy:
       matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+      node-version: [16.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -24,6 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: './server/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run build
