--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: self-hosted    
     defaults:
       run:
-        working-directory: ./server/
+        working-directory: 'Testing'
     strategy:
       matrix:
         node-version: [16.x]
@@ -24,7 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: './server/package-lock.json'
+        cache-dependency-path: '**/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run build
